--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -1,1 +1,101 @@
-Demo
+[General]
+# 日志级别
+loglevel = notify
+# 节点超时
+test-timeout = 5
+# 直连测试 URL
+internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
+# 代理测速 URL
+proxy-test-url = http://1.1.1.1/generate_204
+# 游戏优化: 开启后优先处理 UDP 数据，会增加系统负载
+udp-priority = false
+# UDP 回退行为
+udp-policy-not-supported-behaviour = REJECT
+# DNS 服务器
+dns-server = 223.5.5.5, 119.29.29.29
+# IPv6 DNS 查询
+ipv6 = false
+# IPv6 VIF 模式
+ipv6-vif = disabled
+# DNS 劫持
+hijack-dns = *:53
+# Always Real IP Hosts
+always-real-ip = <simple-hostname>, *.lan, *.direct, *.cmpassport.com, id6.me, open.e.189.cn, mdn.open.wo.cn, opencloud.wostore.cn, auth.wosms.cn, *.10099.com.cn
+# 展示错误页面
+show-error-page-for-reject = true
+# 排除简单主机名
+exclude-simple-hostnames = true
+# 不进行协议嗅探
+always-raw-tcp-hosts = 149.154.*, 91.108.*
+# 自定义 GeoIP 数据库
+geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+
+[Proxy Group]
+Proxy = select, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Irrucky/Tool/main/Surge/icon/surge_3.png, no-alert=0, hidden=0, policy-path=https://dler.cloud/subscribe/x5zPmqClUQjAM3Z2Rv148FaH?protocols=smart&provider=surge&lv=2, update-interval=0
+Auto = select, Proxy, HK, TW, SG, JP, US, UK, DE, TR, PH, NG, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png, no-alert=0, hidden=0, include-all-proxies=0
+AI = select, Auto, US, SG, JP, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/ChatGPT-green.png, no-alert=0, hidden=0, include-all-proxies=0
+Apple = select, Auto, HK, US, SG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/apple.png
+Crypto = select, Auto, DIRECT, HK, TW, JP, US, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/Bitcoin.png
+Twitter = select, Auto, HK, US, TR, NG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/twitter.png
+Telegram = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png, no-alert=0, hidden=0, include-all-proxies=0
+Spotify = select, Auto, PH, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png, no-alert=0, hidden=0, include-all-proxies=0
+YouTube = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/youtube.png, no-alert=0, hidden=0, include-all-proxies=0
+Tiktok = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/tiktok.png, no-alert=0, hidden=0, include-all-proxies=0
+Final = select, Auto, DIRECT, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png, no-alert=0, hidden=0, include-all-proxies=0
+HK = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+US = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+JP = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+TW = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/China.png
+SG = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Singapore.png
+KR = smart, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
+UK = smart, policy-regex-filter=(🇬🇧)|(英国)|(Kingdom)|(UK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
+DE = smart, policy-regex-filter=(🇩🇪)|(德国)|(Germany)|(DE), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
+PH = smart, policy-regex-filter=(🇵🇭)|(菲律宾)|(Philippine)|(PH), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
+TR = smart, policy-regex-filter=(🇹🇷)|(土耳其)|(Turkey)|(TK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
+NG = smart, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG)
+
+[Rule]
+# > 96110
+DOMAIN,prpr.96110.cn.com,DIRECT
+DOMAIN-KEYWORD,96110,REJECT
+DOMAIN-SUFFIX,gjfzpt.cn,REJECT
+# Direct Fix
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Direct.list,DIRECT
+# Reject Ads
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Ads_SukkaW.list,REJECT,pre-matching #!MACOS-ONLY
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Reject.list,REJECT,pre-matching
+# AIGC
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/AI.list,AI
+# > Crypto
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Binance/Binance.list,Crypto
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/OKX/OKX.list,Crypto
+# # Talkatone
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Talkatone.list,US
+# > Google Voice
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/GoogleVoice/GoogleVoice.list,US
+# Telegram
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Telegram.list,Telegram
+AND,((OR,((PROCESS-NAME,Telegram), (IN-PORT,6153))), (HOSTNAME-TYPE,IPv4)),REJECT-NO-DROP
+# > Twitter
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Twitter.list,Twitter
+# Tiktok
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/TikTok.list,Tiktok
+# Spotify
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Spotify.list,Spotify
+# YouTube
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/YouTube.list,YouTube
+# Local Aera Network
+RULE-SET,LAN,DIRECT
+# China
+GEOIP,CN,DIRECT
+# Final
+FINAL,Final,dns-failed
+
+[Host]
+
+
+[MITM]
+skip-server-cert-verify = true
+h2 = true
+ca-passphrase = 
+ca-p12 = 
