--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -31,7 +31,7 @@ always-raw-tcp-hosts = 149.154.*, 91.108.*
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 [Proxy Group]
-Proxy = select, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Irrucky/Tool/main/Surge/icon/surge_3.png, no-alert=0, hidden=0, policy-path=https://dler.cloud/subscribe/x5zPmqClUQjAM3Z2Rv148FaH?protocols=smart&provider=surge&lv=2, update-interval=0
+Proxy = select, policy-path=你的订阅地址, no-alert=0, hidden=0, update-interval=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Irrucky/Tool/main/Surge/icon/surge_3.png
 Auto = select, Proxy, HK, TW, SG, JP, US, UK, DE, TR, PH, NG, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png, no-alert=0, hidden=0, include-all-proxies=0
 AI = select, Auto, US, SG, JP, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/ChatGPT-green.png, no-alert=0, hidden=0, include-all-proxies=0
 Apple = select, Auto, HK, US, SG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/apple.png
@@ -42,17 +42,17 @@ Spotify = select, Auto, PH, icon-url=https://raw.githubusercontent.com/Koolson/Q
 YouTube = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/youtube.png, no-alert=0, hidden=0, include-all-proxies=0
 Tiktok = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/tiktok.png, no-alert=0, hidden=0, include-all-proxies=0
 Final = select, Auto, DIRECT, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png, no-alert=0, hidden=0, include-all-proxies=0
-HK = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
-US = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
-JP = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
-TW = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/China.png
-SG = smart, include-other-group=Proxy, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Singapore.png
+HK = smart, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+US = smart, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+JP = smart, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+TW = smart, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/China.png
+SG = smart, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Singapore.png
 KR = smart, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
 UK = smart, policy-regex-filter=(🇬🇧)|(英国)|(Kingdom)|(UK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
 DE = smart, policy-regex-filter=(🇩🇪)|(德国)|(Germany)|(DE), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
 PH = smart, policy-regex-filter=(🇵🇭)|(菲律宾)|(Philippine)|(PH), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
 TR = smart, policy-regex-filter=(🇹🇷)|(土耳其)|(Turkey)|(TK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
-NG = smart, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG)
+NG = smart, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, 
 
 [Rule]
 # > 96110
