--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -31,7 +31,8 @@ always-raw-tcp-hosts = 149.154.*, 91.108.*
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 [Proxy Group]
-Proxy = select, policy-path=你的订阅地址, no-alert=0, hidden=0, update-interval=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Irrucky/Tool/main/Surge/icon/surge_3.png
+# 应用分流
+Proxy = select, policy-path=你的订阅地址, no-alert=0, hidden=0, update-interval=0, include-all-proxies=0
 Auto = select, Proxy, HK, TW, SG, JP, US, UK, DE, TR, PH, NG, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png, no-alert=0, hidden=0, include-all-proxies=0
 AI = select, Auto, US, SG, JP, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/ChatGPT-green.png, no-alert=0, hidden=0, include-all-proxies=0
 Apple = select, Auto, HK, US, SG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/apple.png
@@ -42,11 +43,12 @@ Spotify = select, Auto, PH, icon-url=https://raw.githubusercontent.com/Koolson/Q
 YouTube = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/youtube.png, no-alert=0, hidden=0, include-all-proxies=0
 Tiktok = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/tiktok.png, no-alert=0, hidden=0, include-all-proxies=0
 Final = select, Auto, DIRECT, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png, no-alert=0, hidden=0, include-all-proxies=0
-HK = smart, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
-US = smart, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
-JP = smart, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
-TW = smart, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/China.png
-SG = smart, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Singapore.png
+# 地区筛选
+HK = smart, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
+US = smart, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
+JP = smart, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
+TW = smart, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
+SG = smart, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
 KR = smart, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
 UK = smart, policy-regex-filter=(🇬🇧)|(英国)|(Kingdom)|(UK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
 DE = smart, policy-regex-filter=(🇩🇪)|(德国)|(Germany)|(DE), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
@@ -59,34 +61,34 @@ NG = smart, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG), no-ale
 DOMAIN,prpr.96110.cn.com,DIRECT
 DOMAIN-KEYWORD,96110,REJECT
 DOMAIN-SUFFIX,gjfzpt.cn,REJECT
-# Direct Fix
+# > Direct Fix
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Direct.list,DIRECT
-# Reject Ads
+# > Reject Ads
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Ads_SukkaW.list,REJECT,pre-matching #!MACOS-ONLY
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Reject.list,REJECT,pre-matching
-# AIGC
+# > AIGC
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/AI.list,AI
 # > Crypto
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Binance/Binance.list,Crypto
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/OKX/OKX.list,Crypto
-# # Talkatone
+# > Talkatone
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Talkatone.list,US
 # > Google Voice
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/GoogleVoice/GoogleVoice.list,US
-# Telegram
+# > Telegram
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Telegram.list,Telegram
 AND,((OR,((PROCESS-NAME,Telegram), (IN-PORT,6153))), (HOSTNAME-TYPE,IPv4)),REJECT-NO-DROP
 # > Twitter
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Twitter.list,Twitter
-# Tiktok
+# > Tiktok
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/TikTok.list,Tiktok
-# Spotify
+# > Spotify
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Spotify.list,Spotify
-# YouTube
+# > YouTube
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/YouTube.list,YouTube
-# Local Aera Network
+# > Local Aera Network
 RULE-SET,LAN,DIRECT
-# China
+# > China
 GEOIP,CN,DIRECT
 # Final
 FINAL,Final,dns-failed
