--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -2,17 +2,17 @@
 # 日志级别
 loglevel = notify
 # 节点超时
-test-timeout = 5
+test-timeout = 3
 # 直连测试 URL
-internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
+internet-test-url = http://www.baidu.com
 # 代理测速 URL
-proxy-test-url = http://1.1.1.1/generate_204
+proxy-test-url = http://www.apple.com/library/test/success.html
 # 游戏优化: 开启后优先处理 UDP 数据，会增加系统负载
 udp-priority = false
 # UDP 回退行为
 udp-policy-not-supported-behaviour = REJECT
 # DNS 服务器
-dns-server = 223.5.5.5, 119.29.29.29
+dns-server = 223.5.5.5, 114.114.114.114
 # IPv6 DNS 查询
 ipv6 = false
 # IPv6 VIF 模式
@@ -33,16 +33,16 @@ geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release
 [Proxy Group]
 # 应用分流
 Proxy = select, policy-path=你的订阅地址, no-alert=0, hidden=0, update-interval=0, include-all-proxies=0
-Auto = select, Proxy, HK, TW, SG, JP, US, UK, DE, TR, PH, NG, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png, no-alert=0, hidden=0, include-all-proxies=0
-AI = select, Auto, US, SG, JP, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/ChatGPT-green.png, no-alert=0, hidden=0, include-all-proxies=0
-Apple = select, Auto, HK, US, SG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/apple.png
-Crypto = select, Auto, DIRECT, HK, TW, JP, US, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/Bitcoin.png
-Twitter = select, Auto, HK, US, TR, NG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/twitter.png
-Telegram = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png, no-alert=0, hidden=0, include-all-proxies=0
-Spotify = select, Auto, PH, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png, no-alert=0, hidden=0, include-all-proxies=0
-YouTube = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/youtube.png, no-alert=0, hidden=0, include-all-proxies=0
-Tiktok = select, Auto, HK, US, SG, JP, TW, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/tiktok.png, no-alert=0, hidden=0, include-all-proxies=0
-Final = select, Auto, DIRECT, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png, no-alert=0, hidden=0, include-all-proxies=0
+Auto = select, Proxy, HK, TW, SG, JP, US, UK, DE, TR, PH, NG, no-alert=0, hidden=0, include-all-proxies=0
+AI = select, Auto, US, SG, JP, no-alert=0, hidden=0, include-all-proxies=0
+Apple = select, Auto, HK, US, SG, no-alert=0, hidden=0, include-all-proxies=0
+Crypto = select, Auto, DIRECT, HK, TW, JP, US, no-alert=0, hidden=0, include-all-proxies=0
+Twitter = select, Auto, HK, US, TR, NG, no-alert=0, hidden=0, include-all-proxies=0
+Telegram = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0
+Spotify = select, Auto, PH, no-alert=0, hidden=0, include-all-proxies=0
+YouTube = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0
+Tiktok = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0
+Final = select, Auto, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 # 地区筛选
 HK = smart, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
 US = smart, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
