--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -32,29 +32,29 @@ geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release
 
 [Proxy Group]
 # 应用分流
-Proxy = select, policy-path=你的订阅地址, no-alert=0, hidden=0, update-interval=0, include-all-proxies=0
-Auto = select, Proxy, HK, TW, SG, JP, US, UK, DE, TR, PH, NG, no-alert=0, hidden=0, include-all-proxies=0
-AI = select, Auto, US, SG, JP, no-alert=0, hidden=0, include-all-proxies=0
-Apple = select, Auto, HK, US, SG, no-alert=0, hidden=0, include-all-proxies=0
-Crypto = select, Auto, DIRECT, HK, TW, JP, US, no-alert=0, hidden=0, include-all-proxies=0
-Twitter = select, Auto, HK, US, TR, NG, no-alert=0, hidden=0, include-all-proxies=0
-Telegram = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0
-Spotify = select, Auto, PH, no-alert=0, hidden=0, include-all-proxies=0
-YouTube = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0
-Tiktok = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0
-Final = select, Auto, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
+Proxy = select, policy-path=你的订阅地址, no-alert=0, hidden=0, update-interval=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/Surge(15).png
+Auto = select, Proxy, HK, TW, SG, JP, US, UK, DE, TR, PH, NG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/waixingren.png
+AI = select, Auto, US, SG, JP, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/ChatGPT-green.png
+Apple = select, Auto, HK, US, SG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/apple.png
+Crypto = select, Auto, DIRECT, HK, TW, JP, US, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/Bitcoin.png
+Twitter = select, Auto, HK, US, TR, NG, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/twitter.png
+Telegram = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/telegram.png
+Spotify = select, Auto, PH, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/spotify(green).png
+YouTube = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/youtube.png
+Tiktok = select, Auto, HK, US, SG, JP, TW, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/tiktok.png
+Final = select, Auto, DIRECT, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/App-Icon/Meta.png
 # 地区筛选
-HK = smart, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
-US = smart, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
-JP = smart, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
-TW = smart, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
-SG = smart, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0
-KR = smart, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
-UK = smart, policy-regex-filter=(🇬🇧)|(英国)|(Kingdom)|(UK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
-DE = smart, policy-regex-filter=(🇩🇪)|(德国)|(Germany)|(DE), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
-PH = smart, policy-regex-filter=(🇵🇭)|(菲律宾)|(Philippine)|(PH), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
-TR = smart, policy-regex-filter=(🇹🇷)|(土耳其)|(Turkey)|(TK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy
-NG = smart, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, 
+HK = smart, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/HongKong.png
+US = smart, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/UnitedStates.png
+JP = smart, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/Japan.png
+TW = smart, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/Taiwan.png
+SG = smart, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, update-interval=0, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/Singapore.png
+KR = smart, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/SouthKorea.png
+UK = smart, policy-regex-filter=(🇬🇧)|(英国)|(Kingdom)|(UK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/UnitedKingdom.png
+DE = smart, policy-regex-filter=(🇩🇪)|(德国)|(Germany)|(DE), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/Germany.png
+PH = smart, policy-regex-filter=(🇵🇭)|(菲律宾)|(Philippine)|(PH), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/Philippines.png
+TR = smart, policy-regex-filter=(🇹🇷)|(土耳其)|(Turkey)|(TK), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/Turkey.png
+NG = smart, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG), no-alert=0, hidden=1, include-all-proxies=0, include-other-group=Proxy, icon-url=https://raw.githubusercontent.com/sooyaaabo/Loon/main/Icon/Flag-Icon/Nigeria.png
 
 [Rule]
 # > 96110
@@ -90,7 +90,7 @@ RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/YouTube.list,YouTube
 RULE-SET,LAN,DIRECT
 # > China
 GEOIP,CN,DIRECT
-# Final
+# > Final
 FINAL,Final,dns-failed
 
 [Host]
