--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -61,36 +61,34 @@ NG = smart, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG), no-ale
 DOMAIN,prpr.96110.cn.com,DIRECT
 DOMAIN-KEYWORD,96110,REJECT
 DOMAIN-SUFFIX,gjfzpt.cn,REJECT
-# > Direct Fix
+# Direct Fix
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Direct.list,DIRECT
-# > Reject Ads
+# Reject Ads
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Ads_SukkaW.list,REJECT,pre-matching #!MACOS-ONLY
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Reject.list,REJECT,pre-matching
-# > AIGC
+# AIGC
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/AI.list,AI
 # > Crypto
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Binance/Binance.list,Crypto
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/OKX/OKX.list,Crypto
-# > Talkatone
+# Talkatone
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Talkatone.list,US
 # > Google Voice
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/GoogleVoice/GoogleVoice.list,US
 # > Telegram
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Telegram.list,Telegram
-AND,((OR,((PROCESS-NAME,Telegram), (IN-PORT,6153))), (HOSTNAME-TYPE,IPv4)),REJECT-NO-DROP
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Telegram/Telegram.list
 # > Twitter
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Twitter.list,Twitter
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Twitter/Twitter.list,Twitter
 # > Tiktok
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/TikTok.list,Tiktok
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/TikTok/TikTok.list,Tiktok
 # > Spotify
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Spotify.list,Spotify
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Spotify/Spotify.list,Spotify
 # > YouTube
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/YouTube.list,YouTube
-# > Local Aera Network
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/YouTube/YouTube.list,YouTube
+# 以下规则将触发本地 DNS 解析
 RULE-SET,LAN,DIRECT
-# > China
 GEOIP,CN,DIRECT
-# > Final
+# 兜底分流
 FINAL,Final,dns-failed
 
 [Host]
