--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -76,7 +76,7 @@ RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Talkatone.list,US
 # > Google Voice
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/GoogleVoice/GoogleVoice.list,US
 # > Telegram
-RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Telegram/Telegram.list
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Telegram/Telegram.list,Telegram
 # > Twitter
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Twitter/Twitter.list,Twitter
 # > Tiktok
