--- a/Conf/Surge.conf
+++ b/Conf/Surge.conf
@@ -52,12 +52,12 @@ NG = smart, policy-regex-filter=(🇳🇬)|(尼日利亚)|(Nigeria)|(NG), no-ale
 DOMAIN,prpr.96110.cn.com,DIRECT
 DOMAIN-KEYWORD,96110,REJECT
 DOMAIN-SUFFIX,gjfzpt.cn,REJECT
-# AIGC
+# > AIGC
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/AI.list,AI
 # > Crypto
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Binance/Binance.list,Crypto
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/OKX/OKX.list,Crypto
-# Talkatone
+# > Talkatone
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Surge/Rules/Talkatone.list,US
 # > Google Voice
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/GoogleVoice/GoogleVoice.list,US
@@ -71,10 +71,10 @@ RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Su
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Spotify/Spotify.list,Spotify
 # > YouTube
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/YouTube/YouTube.list,YouTube
-# 以下规则将触发本地 DNS 解析
+# > 以下规则将触发本地 DNS 解析
 RULE-SET,LAN,DIRECT
 GEOIP,CN,DIRECT
-# 兜底分流
+# > 兜底分流
 FINAL,Final,dns-failed
 
 [MITM]
